Organizando Pagina Noticias

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             
             <a href="./paginas/contacto.html" id="contacto">Contáctame</a>
         </header>
-        <main>
-            <div id="principal">
+        <main id="principal">
+            <!-- <div id="principal"> -->
                 <div class="titulo_info">
                     <h2>MAURICIO ORTIZ</h2>
                 </div>
@@ -119,7 +119,7 @@
                         información personal.
                     </p>
                 </section>
-            </div>
+            
 
         </main>
         <aside id="publicidad">
