--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -19,20 +19,25 @@
 </head>
 
 <body>
-    <header id="header">
-        <span id="main_icon">
-            <img src="../multimedia/favicon.png" alt="MO">
-        </span>
-        <nav class="menu">
-            <ul class="menu__lista">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Noticias</a></li>
-                <li><a href="./recursos.html">Recursos</a></li>
-                <li><a href="./lenguajes.html">Lenguajes</a></li>
-                <li><a href="../index.html#sobre-mi">Sobre Mí</a></li>
-                <li><a id="contacto" href="./contacto.html">Contáctame</a></li>
-            </ul>
-        </nav>
+    
+
+</header>
+<header id="header">
+    <span id="main_icon">
+        <img src="../multimedia/favicon.png" alt="MO">
+    </span>
+    <nav class="menu">
+        <input type="checkbox" class="menu_alternador">
+        <div class="hamburguesa"></div>
+        <ul class="menu__lista">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="./recursos.html">Recursos</a></li>
+            <li><a href="./lenguajes.html">Lenguajes</a></li>
+            <li><a href="../index.html#sobre-mi">Sobre Mí</a></li>
+        </ul>
+    </nav>
+    <a href="./paginas/contacto.html" id="contacto">Contáctame</a>
     </header>
     <main>
         <div class="titulo_info">
