Responsive all pages

--- a/paginas/recursos.html
+++ b/paginas/recursos.html
@@ -19,22 +19,25 @@
 </head>
 
 <body>
-    <header id="header">
-        <span id="main_icon">
-            <img src="../multimedia/favicon.png" alt="MO">
-        </span>
-        <nav class="menu">
-            <ul class="menu__lista">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./noticias.html">Noticias</a></li>
-                <li><a href="#">Recursos</a></li>
-                <li><a href="./lenguajes.html">Lenguajes</a></li>
-                <li><a href="../index.html#sobre-mi">Sobre Mí</a></li>
-                <li><a id="contacto" href="./contacto.html">Contáctame</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
+    <div id="grilla">
+        <header id="header">
+            <span id="main_icon">
+                <img src="../multimedia/favicon.png" alt="MO">
+            </span>
+            <nav class="menu">
+                <input type="checkbox" class="menu_alternador">
+                <div class="hamburguesa"></div>
+                <ul class="menu__lista">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a href="#">Recursos</a></li>
+                    <li><a href="./lenguajes.html">Lenguajes</a></li>
+                    <li><a href="../index.html#sobre-mi">Sobre Mí</a></li>
+                </ul>
+            </nav>
+            <a href="./contacto.html" id="contacto">Contáctame</a>
+        </header>
+        <main id="principal">
         <div class="titulo_info">
             <h2>MAURICIO ORTIZ</h2>
         </div>
@@ -134,18 +137,55 @@
         </section>
 
     </main>
+    <aside id="publicidad">
+        <p>Espacio para publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+            Espacio para Publicidad.
+
+        </p>
+    </aside>
     <footer>
         <div class="footer__div">
             <a href="#header">Volver arriba</a>
             <p>Todos los derechos reservados - Córdoba, Colombia - 2022</p>
         </div>
-        <h4>Sígueme</h4>
-        <ul>
-            <li><a href="#">Instagram </a></li>
-            <li><a href="#">Facebook </a></li>
-            <li><a href="#">GitHub</a></li>
-        </ul>
+        <div>
+            <h4>Sígueme</h4>
+            <ul>
+                <li><a href="#">Instagram </a></li>
+                <li><a href="#">Facebook </a></li>
+                <li><a href="#">GitHub</a></li>
+                <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
+            </ul>
+        </div>
     </footer>
+</div>
 </body>
 
 </html>
