--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -83,13 +83,15 @@
                             </div>
 
                             <div class="form_linea">
-                                <div class="label label_suscripcion"><label for="suscripcion">¿Deseas suscribirte a nuestro
+                                <div class="label label_suscripcion"><label for="suscripcion">¿Deseas suscribirte a
+                                        nuestro
                                         newsletter?</label></div>
                                 <div class="input input_suscripcion">
                                     Sí<input type="radio" name="suscripcion" id="" value="si">
                                     No<input type="radio" name="suscripcion" id="" value="no"><br>
                                 </div>
                             </div>
+                            
 
                             <div class="form_linea">
                                 <div class="label"></div>
