Aplicando SASS a todo el proyecto

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../estilos/styles.css">
+    <!-- <link rel="stylesheet" href="../estilos/styles.css"> -->
+    <link rel="stylesheet" href="../estilos/sass/main.css">
 
     <link rel="icon" href="../multimedia/favicon.png" type="image/x-icon">
     <title>Mauricio Ortiz - Full Stack Developer</title>
@@ -46,7 +47,6 @@
             <section>
                 <form action="">
                     <fieldset>
-                        <legend></legend>
                         <span class="form_contacto_1">
                             <div class="form_linea">
 
@@ -66,10 +66,10 @@
                             <div class="form_linea">
                                 <div class="label label_gen"><label for="">Género:</label></div>
                                 <div class="input input_gen"> <select name="sexo" id="">
-                                        <option value="hombre">Hombre</option>
-                                        <option value="mujer">Mujer</option>
-                                        <option value="otro">Otro</option>
-                                        <option value="no-responde">Prefiero No Responder</option>
+                                    <option value="hombre">Hombre</option>
+                                    <option value="mujer">Mujer</option>
+                                    <option value="otro">Otro</option>
+                                    <option value="no-responde" selected>Prefiero No Responder</option>
                                     </select> </div>
                                 <!-- </div>
                         <div class="form_linea"> -->
