--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Las siguientes lineas las saqué de mi investigación personal.
-    Es cómo conectar las fuentes de google con el documento -->
-
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
-    <!-- Hasta aquí se conectan las fuentes de Google -->
 
-    <link rel="stylesheet" href="./estilos/styles.css">
+    <!-- <link rel="stylesheet" href="./estilos/styles.css"> -->
+    <link rel="stylesheet" href="./estilos/sass/main.css">
     <link rel="icon" href="./multimedia/favicon.png" type="image/x-icon">
     <title>Mauricio Ortiz - Full Stack Developer</title>
 </head>
