--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../estilos/styles.css">
+    <!-- <link rel="stylesheet" href="../estilos/styles.css"> -->
+    <link rel="stylesheet" href="../estilos/sass/main.css">
 
     <link rel="icon" href="../multimedia/favicon.png" type="image/x-icon">
     <title>Mauricio Ortiz - Full Stack Developer</title>
