Añadiendo SEO al sitio, extend y map en SASS

--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="blog, programación, desarrollo web, aprender, noticias, actualidad">
+    <meta name="description" content="Blog de Desarrollo Web de Mauricio Ortiz. En esta página te podrás enterar de las noticias del mundo del desarrollo web más actuales.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +19,7 @@
     <link rel="stylesheet" href="../estilos/sass/main.css">
 
     <link rel="icon" href="../multimedia/favicon.png" type="image/x-icon">
-    <title>Mauricio Ortiz - Full Stack Developer</title>
+    <title>Noticias | Blog de Desarrollo Web | Mauricio Ortiz</title>
 </head>
 
 <body>
@@ -39,11 +42,8 @@
             <a href="./contacto.html" id="contacto">Contáctame</a>
         </header>
         <main id="principal">
-            <div class="titulo_info">
-                <h2>MAURICIO ORTIZ</h2>
-            </div>
-            <h2 class="p__info" style="font-weight: 600;">Aprendiz de Desarrollo Full Stack en CoderHouse</h2>
-
+            <h2>MAURICIO ORTIZ</h2>
+            <h1>Desarrollador Web Full Stack</h1>
             <section>
                 <ul>
                     <h2 class="titulo_info">NOTICIAS</h2>
