--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="blog, programación, desarrollo web, aprender">
+    <meta name="description"
+        content="Blog de Desarrollo Web de Mauricio Ortiz. En este sitio encontrarás utilidades, noticias y explicaciones sobre desarrollo web.">
+
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,59 +45,58 @@
             <a href="./paginas/contacto.html" id="contacto">Contáctame</a>
         </header>
         <main id="principal">
-            <div class="titulo_info">
-                <h2>MAURICIO ORTIZ</h2>
-            </div>
-            <h2 class="p__info" style="font-weight: 600;">Aprendiz de Desarrollo Full Stack en CoderHouse</h2>
-            <section>
-                <p class="p__info">
-                    ¡Hola! Soy Mauricio Ortiz, aprendiz en Desarrollo Web Full Stack en CoderHouse desde Mayo de
-                    2022.
-                    <br />
-                    Creo firmemente que uno de los objetivos más inherentes al ser humano es aprender algo nuevo
-                    siempre, a
-                    lo largo
-                    de toda la vida.<br /><br />
-                    Te invito a que navegues por el sitio y veas las utilidades disponibles para ti. ¡Un abrazo!
-                </p>
-            </section>
-            <section class="tabla_contenido">
-                <div class="contenido">
-                    <h3>Noticias</h3>
-                    <a href="./paginas/noticias.html"><img src="./multimedia/Noticias.png" alt="Las Noticias"></a>
-                </div>
-                <div class="contenido">
-                    <h3>Lenguajes</h3>
-                    <a href="./paginas/lenguajes.html"><img src="./multimedia/Lenguajes.png" alt="Los Lenguajes"></a>
-                </div>
-                <div class="contenido">
-                    <h3>Recursos</h3>
-                    <a href="./paginas/recursos.html"><img src="./multimedia/Recursos.png" alt="Los Recursos"></a>
-                </div>
-            </section>
-            <hr>
-            <section id="sobre-mi">
-                <h2 class="titulo_info">SOBRE MÍ</h2>
-                <p class="p__info clearfix"><img id="mi_foto" src="./multimedia/person.png" width="200px"
-                        alt="Mi foto de perfil">Aqui va toda mi información personal. La llenaré después porque no
-                    se si esta será mi idea definitiva.
-                    Aqui
-                    va toda mi información personal. La llenaré después porque no se si esta será mi idea
-                    definitiva. Aqui
-                    va
-                    toda mi información personal. La llenaré después porque no se si esta será mi idea definitiva.
-                    Aqui va
-                    toda
-                    mi información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui
-                    va toda
-                    mi
-                    información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui va
-                    toda mi
-                    información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui va
-                    toda mi
-                    información personal.
-                </p>
-            </section>
+            <h2>MAURICIO ORTIZ</h2>
+            <h1>Desarrollador Web Full Stack</h1>
+                <section>
+                    <p class="p__info">
+                        ¡Hola! Soy Mauricio Ortiz, aprendiz en Desarrollo Web Full Stack en CoderHouse desde Mayo de
+                        2022.
+                        <br />
+                        Creo firmemente que uno de los objetivos más inherentes al ser humano es aprender algo nuevo
+                        siempre, a
+                        lo largo
+                        de toda la vida.<br /><br />
+                        Te invito a que navegues por el sitio y veas las utilidades disponibles para ti. ¡Un abrazo!
+                    </p>
+                </section>
+                <section class="tabla_contenido">
+                    <div class="contenido">
+                        <h3>Noticias</h3>
+                        <a href="./paginas/noticias.html"><img src="./multimedia/Noticias.png" alt="Las Noticias"></a>
+                    </div>
+                    <div class="contenido">
+                        <h3>Lenguajes</h3>
+                        <a href="./paginas/lenguajes.html"><img src="./multimedia/Lenguajes.png"
+                                alt="Los Lenguajes"></a>
+                    </div>
+                    <div class="contenido">
+                        <h3>Recursos</h3>
+                        <a href="./paginas/recursos.html"><img src="./multimedia/Recursos.png" alt="Los Recursos"></a>
+                    </div>
+                </section>
+                <hr>
+                <section id="sobre-mi">
+                    <h2 class="titulo_info">SOBRE MÍ</h2>
+                    <p class="p__info clearfix"><img id="mi_foto" src="./multimedia/person.png" width="200px"
+                            alt="Mi foto de perfil">Aqui va toda mi información personal. La llenaré después porque no
+                        se si esta será mi idea definitiva.
+                        Aqui
+                        va toda mi información personal. La llenaré después porque no se si esta será mi idea
+                        definitiva. Aqui
+                        va
+                        toda mi información personal. La llenaré después porque no se si esta será mi idea definitiva.
+                        Aqui va
+                        toda
+                        mi información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui
+                        va toda
+                        mi
+                        información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui va
+                        toda mi
+                        información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui va
+                        toda mi
+                        información personal.
+                    </p>
+                </section>
 
 
         </main>
@@ -137,9 +141,9 @@
             <div>
                 <h4>Sígueme</h4>
                 <ul>
-                    <li><a href="#">Instagram </a></li>
-                    <li><a href="#">Facebook </a></li>
-                    <li><a href="#">GitHub</a></li>
+                    <li><a class="ahref--instagram" href="#">Instagram </a></li>
+                    <li><a href="#" class="ahref--facebook">Facebook </a></li>
+                    <li><a href="#" class="ahref--github">GitHub</a></li>
                     <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
                 </ul>
             </div>
