--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="blog, programación, desarrollo web, aprender, contacto, formulario">
+    <meta name="description"
+        content="Blog de Desarrollo Web de Mauricio Ortiz. Contáctame para más información en el siguiente formulario">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +19,7 @@
     <link rel="stylesheet" href="../estilos/sass/main.css">
 
     <link rel="icon" href="../multimedia/favicon.png" type="image/x-icon">
-    <title>Mauricio Ortiz - Full Stack Developer</title>
+    <title>Contacto | Blog de Desarrollo Web | Mauricio Ortiz </title>
 </head>
 
 <body>
@@ -39,10 +42,8 @@
             <a href="#" id="contacto">Contáctame</a>
         </header>
         <main id="principal">
-            <div class="titulo_info">
-                <h2>MAURICIO ORTIZ</h2>
-            </div>
-            <h2 class="p__info" style="font-weight: 600;">Aprendiz de Desarrollo Full Stack en CoderHouse</h2>
+            <h2>MAURICIO ORTIZ</h2>
+            <h1>Desarrollador Web Full Stack</h1>
             <h2 class="titulo_info">Información de Contacto</h2>
             <section>
                 <form action="">
@@ -66,10 +67,10 @@
                             <div class="form_linea">
                                 <div class="label label_gen"><label for="">Género:</label></div>
                                 <div class="input input_gen"> <select name="sexo" id="">
-                                    <option value="hombre">Hombre</option>
-                                    <option value="mujer">Mujer</option>
-                                    <option value="otro">Otro</option>
-                                    <option value="no-responde" selected>Prefiero No Responder</option>
+                                        <option value="hombre">Hombre</option>
+                                        <option value="mujer">Mujer</option>
+                                        <option value="otro">Otro</option>
+                                        <option value="no-responde" selected>Prefiero No Responder</option>
                                     </select> </div>
                                 <!-- </div>
                         <div class="form_linea"> -->
@@ -91,7 +92,7 @@
                                     No<input type="radio" name="suscripcion" id="" value="no"><br>
                                 </div>
                             </div>
-                            
+
 
                             <div class="form_linea">
                                 <div class="label"></div>
@@ -113,15 +114,18 @@
                             <h3 class="titulo_info">Mi Info de Contacto</h3>
                             <table id="tabla_contacto">
                                 <tr>
-                                    <th><img src="../multimedia/iconos_contacto/icono_correo.png" alt="correo" /> </th>
+                                    <th><img src="../multimedia/iconos_contacto/icono_correo.png" alt="correo" />
+                                    </th>
                                     <td>mauzp88@gmail.com</td>
                                 </tr>
                                 <tr>
-                                    <th><img src="../multimedia/iconos_contacto/icono_tel.png" alt="telefono" /></th>
+                                    <th><img src="../multimedia/iconos_contacto/icono_tel.png" alt="telefono" />
+                                    </th>
                                     <td>(+57) 000 00 00 </td>
                                 </tr>
                                 <tr>
-                                    <th><img src="../multimedia/iconos_contacto/icono_dir.png" alt="dirección" /></th>
+                                    <th><img src="../multimedia/iconos_contacto/icono_dir.png" alt="dirección" />
+                                    </th>
                                     <td>00-#000 Córdoba, Colombia</td>
                                 </tr>
                             </table>
