Aplicando clases generadas en Map de SASS

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -177,9 +177,9 @@
             <div>
                 <h4>Sígueme</h4>
                 <ul>
-                    <li><a href="#">Instagram </a></li>
-                    <li><a href="#">Facebook </a></li>
-                    <li><a href="#">GitHub</a></li>
+                    <li><a class="ahref--instagram" href="#">Instagram </a></li>
+                    <li><a href="#" class="ahref--facebook">Facebook </a></li>
+                    <li><a href="#" class="ahref--github">GitHub</a></li>
                     <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
                 </ul>
             </div>
