Agregando detalles menores

--- a/index.html
+++ b/index.html
@@ -47,56 +47,48 @@
         <main id="principal">
             <h2>MAURICIO ORTIZ</h2>
             <h1>Desarrollador Web Full Stack</h1>
-                <section>
-                    <p class="p__info">
-                        ¡Hola! Soy Mauricio Ortiz, aprendiz en Desarrollo Web Full Stack en CoderHouse desde Mayo de
-                        2022.
-                        <br />
-                        Creo firmemente que uno de los objetivos más inherentes al ser humano es aprender algo nuevo
-                        siempre, a
-                        lo largo
-                        de toda la vida.<br /><br />
-                        Te invito a que navegues por el sitio y veas las utilidades disponibles para ti. ¡Un abrazo!
-                    </p>
-                </section>
-                <section class="tabla_contenido">
-                    <div class="contenido">
-                        <h3>Noticias</h3>
-                        <a href="./paginas/noticias.html"><img src="./multimedia/Noticias.png" alt="Las Noticias"></a>
-                    </div>
-                    <div class="contenido">
-                        <h3>Lenguajes</h3>
-                        <a href="./paginas/lenguajes.html"><img src="./multimedia/Lenguajes.png"
-                                alt="Los Lenguajes"></a>
-                    </div>
-                    <div class="contenido">
-                        <h3>Recursos</h3>
-                        <a href="./paginas/recursos.html"><img src="./multimedia/Recursos.png" alt="Los Recursos"></a>
-                    </div>
-                </section>
-                <hr>
-                <section id="sobre-mi">
-                    <h2 class="titulo_info">SOBRE MÍ</h2>
-                    <p class="p__info clearfix"><img id="mi_foto" src="./multimedia/person.png" width="200px"
-                            alt="Mi foto de perfil">Aqui va toda mi información personal. La llenaré después porque no
-                        se si esta será mi idea definitiva.
-                        Aqui
-                        va toda mi información personal. La llenaré después porque no se si esta será mi idea
-                        definitiva. Aqui
-                        va
-                        toda mi información personal. La llenaré después porque no se si esta será mi idea definitiva.
-                        Aqui va
-                        toda
-                        mi información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui
-                        va toda
-                        mi
-                        información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui va
-                        toda mi
-                        información personal. La llenaré después porque no se si esta será mi idea definitiva. Aqui va
-                        toda mi
-                        información personal.
-                    </p>
-                </section>
+            <section>
+                <p class="p__info">
+                    ¡Hola! Soy Mauricio Ortiz, aprendiz en Desarrollo Web Full Stack en CoderHouse desde Mayo de
+                    2022.
+                    <br />
+                    Creo firmemente que uno de los objetivos más inherentes al ser humano es aprender algo nuevo
+                    siempre, a
+                    lo largo
+                    de toda la vida.<br /><br />
+                    Te invito a que navegues por el sitio y veas las utilidades disponibles para ti. ¡Un abrazo!
+                </p>
+            </section>
+            <section class="tabla_contenido">
+                <div class="contenido">
+                    <h3>Noticias</h3>
+                    <a href="./paginas/noticias.html"><img src="./multimedia/Noticias.png" alt="Las Noticias"></a>
+                </div>
+                <div class="contenido">
+                    <h3>Lenguajes</h3>
+                    <a href="./paginas/lenguajes.html"><img src="./multimedia/Lenguajes.png" alt="Los Lenguajes"></a>
+                </div>
+                <div class="contenido">
+                    <h3>Recursos</h3>
+                    <a href="./paginas/recursos.html"><img src="./multimedia/Recursos.png" alt="Los Recursos"></a>
+                </div>
+            </section>
+            <hr>
+            <section id="sobre-mi">
+                <h2 class="titulo_info">SOBRE MÍ</h2>
+                <p class="p__info clearfix"><img id="mi_foto" src="./multimedia/person.jpg" width="200px"
+                        alt="Mi foto de perfil">Soy Ingeniero Industrial de profesión, y un apasionado del aprendizaje.
+                        Me encanta la música, de hecho toco la guitarra, el piano y la flauta. Ah, y también me gusta cantar.
+                        También me llaman la atención los idiomas, en particular el inglés. <br>
+                        Desde hace varios años trabajo como profesor en el área de las matemáticas y la lógica, y debo decir que
+                        la programación y el desarrollo de sitios web es algo que me fascina hacer.
+                        Tengo conocimientos en HTML, CSS, uso de BEM, SASS y Javascript, Uso de Wordpress, así como bases
+                        en los lenguajes de C# y Kotlin. <br>
+                        Deseo llevar mis conocimientos al próximo nivel, creciendo tanto en habilidades como experiencia, y 
+                        ayudar a crecer a aquellos con quienes colabore en proyectos por todo el mundo.
+                        
+                </p>
+            </section>
 
 
         </main>
@@ -143,7 +135,7 @@
                 <ul>
                     <li><a class="ahref--instagram" href="#">Instagram </a></li>
                     <li><a href="#" class="ahref--facebook">Facebook </a></li>
-                    <li><a href="#" class="ahref--github">GitHub</a></li>
+                    <li><a href="https://github.com/MauOrtizDev" class="ahref--github" target="_blank">GitHub</a></li>
                     <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
                 </ul>
             </div>
