--- a/paginas/recursos.html
+++ b/paginas/recursos.html
@@ -140,8 +140,26 @@
                         </article>
                     </li>
                     <li>
+                        <article class="recurso clearfix">
+
+                            <a href="https://www.w3schools.com/" target="_blank"><img
+                                    src="https://upload.wikimedia.org/wikipedia/commons/a/a0/W3Schools_logo.svg"
+                                    alt="recurso"></a>
+
+                            <a href="https://www.w3schools.com/" target="_blank">
+                                <h3>Portal de W3 Schools</h3>
+
+                                <p>
+                                    Sitio Web dedicado a la enseñanza de diversos temas relacionados con el desarrollo
+                                    web. Desde los conceptos básicos de HTML, hasta lenguajes como PHP, Javascript
+                                    y mucho más. Todo acompañado con un sinnúmero de ejemplos.
+                                </p>
+                            </a>
+                        </article>
+                    </li>
+                    <li>
                         <article class="recurso">
-                            <h3><a href="#">Más Recursos</a></h3>
+                            <h3><a href="#">Más recursos muy pronto...</a></h3>
                         </article>
                     </li>
                 </ul>
@@ -191,7 +209,7 @@
                 <ul>
                     <li><a class="ahref--instagram" href="#">Instagram </a></li>
                     <li><a href="#" class="ahref--facebook">Facebook </a></li>
-                    <li><a href="#" class="ahref--github">GitHub</a></li>
+                    <li><a href="https://github.com/MauOrtizDev" class="ahref--github" target="_blank">GitHub</a></li>
                     <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
                 </ul>
             </div>
