--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -179,7 +179,7 @@
                 <ul>
                     <li><a class="ahref--instagram" href="#">Instagram </a></li>
                     <li><a href="#" class="ahref--facebook">Facebook </a></li>
-                    <li><a href="#" class="ahref--github">GitHub</a></li>
+                    <li><a href="https://github.com/MauOrtizDev" class="ahref--github" target="_blank">GitHub</a></li>
                     <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
                 </ul>
             </div>
