--- a/paginas/lenguajes.html
+++ b/paginas/lenguajes.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="blog, programación, desarrollo web, aprender, lenguajes, HTML, CCS, SASS">
-    <meta name="description" content="Blog de Desarrollo Web de Mauricio Ortiz. Aquí podrás tener una lista de videos explicando los principales lenguajes de programación web.">
+    <meta name="description"
+        content="Blog de Desarrollo Web de Mauricio Ortiz. Aquí podrás tener una lista de videos explicando los principales lenguajes de programación web.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,115 +45,144 @@
         <main id="principal">
             <h2>MAURICIO ORTIZ</h2>
             <h1>Desarrollador Web Full Stack</h1>
-        <section>
-            <h2 class="titulo_info">Lenguajes de Programación</h2>
-            <p class="p__info">A medida que se avanza en el curso, hemos estado viendo diversos lenguajes. Observa los
-                videos y aprende
-                más
-                sobre ellos:</p>
-            <ul>
-                <li>
-                    <article class="lenguaje clearfix">
-                        <h3>HTML 5</h3>
-                        <div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/kN1XP-Bef7w"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                            <p>
-                                HTML 5 (HyperText Markup Language, versión 5) es la quinta revisión importante del
-                                lenguaje básico de la World Wide Web, HTML.
-                                La versión definitiva de la quinta revisión del estándar se publicó en
-                                octubre de 2014.3 <br />
+            <section>
+                <h2 class="titulo_info">Lenguajes de Programación</h2>
+                <p class="p__info">A medida que se avanza en el curso, hemos estado viendo diversos lenguajes. Observa
+                    los
+                    videos y aprende
+                    más
+                    sobre ellos:</p>
+                <ul>
+                    <li>
+                        <article class="lenguaje clearfix">
+                            <h3>HTML 5</h3>
+                            <div>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/kN1XP-Bef7w"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                                <p>
+                                    HTML 5 (HyperText Markup Language, versión 5) es la quinta revisión importante del
+                                    lenguaje básico de la World Wide Web, HTML.
+                                    La versión definitiva de la quinta revisión del estándar se publicó en
+                                    octubre de 2014.3 <br />
 
-                                Al no ser reconocido en viejas versiones de navegadores por sus nuevas etiquetas, se
-                                recomienda al usuario común actualizar su navegador a la versión más nueva, para poder
-                                disfrutar de todo el potencial que provee HTML 5. <br />
+                                    Al no ser reconocido en viejas versiones de navegadores por sus nuevas etiquetas, se
+                                    recomienda al usuario común actualizar su navegador a la versión más nueva, para
+                                    poder
+                                    disfrutar de todo el potencial que provee HTML 5. <br />
 
-                                El desarrollo de este lenguaje de marcado es regulado por el Consorcio W3C.
-                            </p>
-                        </div>
-                    </article>
-                </li>
-                <li>
-                    <article class="lenguaje clearfix">
-                        <h3>CSS</h3>
-                        <div>
-                            <iframe src="https://www.youtube.com/embed/OWKXEJN67FE"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                            <p>
-                                CSS (siglas en inglés de Cascading Style Sheets), en español «Hojas de estilo en
-                                cascada», es un lenguaje de diseño gráfico para definir y crear la presentación de un
-                                documento estructurado escrito en un lenguaje de marcado. Es muy usado para establecer
-                                el diseño visual de los documentos web, e interfaces de usuario escritas en HTML o
-                                XHTML. Junto con HTML y JavaScript, CSS es una tecnología usada por muchos
-                                sitios web para crear páginas visualmente atractivas, interfaces de usuario para
-                                aplicaciones web y GUIs para muchas aplicaciones móviles (como Firefox OS).
-                            </p>
-                        </div>
-                    </article>
-                </li>
-                <li>
-                    <article class="lenguaje clearfix">
-                        <h3>Otros lenguajes se añadirán aquí...</h3>
-                    </article>
+                                    El desarrollo de este lenguaje de marcado es regulado por el Consorcio W3C.
+                                </p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="lenguaje clearfix">
+                            <h3>CSS</h3>
+                            <div>
+                                <iframe src="https://www.youtube.com/embed/OWKXEJN67FE" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                                <p>
+                                    CSS (siglas en inglés de Cascading Style Sheets), en español «Hojas de estilo en
+                                    cascada», es un lenguaje de diseño gráfico para definir y crear la presentación de
+                                    un
+                                    documento estructurado escrito en un lenguaje de marcado. Es muy usado para
+                                    establecer
+                                    el diseño visual de los documentos web, e interfaces de usuario escritas en HTML o
+                                    XHTML. Junto con HTML y JavaScript, CSS es una tecnología usada por muchos
+                                    sitios web para crear páginas visualmente atractivas, interfaces de usuario para
+                                    aplicaciones web y GUIs para muchas aplicaciones móviles (como Firefox OS).
+                                </p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="lenguaje clearfix">
+                            <h3>SASS</h3>
+                            <div>
+                                <iframe src="https://www.youtube.com/embed/M4CltAflU2k" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                                <p>
+                                    Sass (Syntactically Awesome Stylesheets) es un lenguaje de hoja de estilos en
+                                    cascada inicialmente diseñado por Hampton Catlin y desarrollado por Natalie
+                                    Weizenbaum. Después de sus versiones iniciales, Nathan Weizenbaum y Chris
+                                    Eppstein han continuado extendiendo Sass con SassScript, un lenguaje de script
+                                    simple, usado en los ficheros Sass. <br>
 
-                </li>
-            </ul>
-        </section>
+                                    Sass es un metalenguaje de Hojas de Estilo en Cascada (CSS). Es un lenguaje de
+                                    script que es traducido a CSS, SassScript es el lenguaje de script en sí mismo. Sass
+                                    consiste en dos sintaxis. La sintaxis original, llamada indented syntax («sintaxis
+                                    con sangrado») que usa una sintaxis similar al Haml. Este usa la sangría para
+                                    separar bloques de código y el carácter nueva línea para separar reglas. La sintaxis
+                                    más reciente, SCSS, usa el formato de bloques como CSS.
+                                </p>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="lenguaje clearfix">
+                            <h3>Otros lenguajes se añadirán aquí...</h3>
+                        </article>
 
-    </main>
-    <aside id="publicidad">
-        <p>Espacio para publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
-            Espacio para Publicidad.
+                    </li>
+                </ul>
+            </section>
 
-        </p>
-    </aside>
-    <footer>
-        <div class="footer__div">
-            <a href="#header">Volver arriba</a>
-            <p>Todos los derechos reservados - Córdoba, Colombia - 2022</p>
-        </div>
-        <div>
-            <h4>Sígueme</h4>
-            <ul>
-                <li><a class="ahref--instagram" href="#">Instagram </a></li>
-                <li><a href="#" class="ahref--facebook">Facebook </a></li>
-                <li><a href="#" class="ahref--github">GitHub</a></li>
-                <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
-            </ul>
-        </div>
-    </footer>
-</div>
+        </main>
+        <aside id="publicidad">
+            <p>Espacio para publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+                Espacio para Publicidad.
+
+            </p>
+        </aside>
+        <footer>
+            <div class="footer__div">
+                <a href="#header">Volver arriba</a>
+                <p>Todos los derechos reservados - Córdoba, Colombia - 2022</p>
+            </div>
+            <div>
+                <h4>Sígueme</h4>
+                <ul>
+                    <li><a class="ahref--instagram" href="#">Instagram </a></li>
+                    <li><a href="#" class="ahref--facebook">Facebook </a></li>
+                    <li><a href="https://github.com/MauOrtizDev" class="ahref--github" target="_blank">GitHub</a></li>
+                    <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
