--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="blog, programación, desarrollo web, aprender, noticias, actualidad">
-    <meta name="description" content="Blog de Desarrollo Web de Mauricio Ortiz. En esta página te podrás enterar de las noticias del mundo del desarrollo web más actuales.">
+    <meta name="description"
+        content="Blog de Desarrollo Web de Mauricio Ortiz. En esta página te podrás enterar de las noticias del mundo del desarrollo web más actuales.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,72 +50,64 @@
                     <h2 class="titulo_info">NOTICIAS</h2>
                     <li>
                         <article class="noticia clearfix">
-                            <h3>Título Noticia 1</h3>
+                            <h3>GitHub Copilot, el asistente para programar basado en IA, ya está disponible para todos:
+                                cuánto cuesta y quienes lo pueden usar gratis</h3>
                             <div>
-                                <a href="#"><img src="../multimedia/imagen_vacia.png" alt="noticia"></a>
+                                <a href="#"><img src="../multimedia/noticias/copilot.jpg" alt="GitHub Copilot"
+                                        target="_blank"></a>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                    reprehenderit
-                                    in
-                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                    laborum.
-                                    <br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut
-                                    labore et dolore magna aliqua. <a href="#">Ver más...</a>
+                                    GitHub Copilot, el asistente basado en la inteligencia artificial de OpenAI que
+                                    sugiere código y funciones completas en tiempo real, ahora está disponible para
+                                    todos los desarrolladores por un precio de 10 dólares mensuales o 100 dólares por un
+                                    año, pero se han habilitado algunas opciones que permiten utilizarlo de forma
+                                    gratuita. <br> Desde el lanzamiento de la technical preview el año pasado, GitHub
+                                    Copilot ha demostrado ser un interesante recurso para los programadores, que no
+                                    busca reemplazarlos, brindarles ayuda para evitar perder el tiempo principalmente
+                                    con ciertas tareas repetitivas. <a
+                                        href="https://www.xataka.com/aplicaciones/github-copilot-asistente-para-escribir-codigo-basado-ia-esta-disponible-para-todos-esto-que-costara">Ver
+                                        más...</a>
                                 </p>
                             </div>
                         </article>
                     </li>
                     <li>
                         <article class="noticia clearfix">
-                            <h3>Título Noticia 2</h3>
+                            <h3>Así funciona la nueva IA "No-Code" de Microsoft: No programes, solo dibuja</h3>
                             <div>
-                                <a href="#"><img src="../multimedia/imagen_vacia.png" alt="noticia"></a>
+                                <a href="#"><img src="../multimedia/noticias/nocode.webp" alt="NoCode IA"
+                                        target="_blank"></a>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                    reprehenderit
-                                    in
-                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                    laborum.
-                                    <br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut
-                                    labore et dolore magna aliqua. <a href="#">Ver más...</a>
+                                    Hace poco se inició el evento Microsoft Build 2022 orientado a desarrolladores, y
+                                    entre
+                                    las novedades hubo una especialmente curiosa: un nuevo sistema "No-Code" que permite
+                                    desarrollar la interfaz de usuario de las aplicaciones no programándola, sino
+                                    dibujándola. <br>
+
+                                    El sistema forma parte de la plataforma Power Apps, una serie de herramientas para
+                                    desarrollar aplicaciones sin tener que lidiar apenas con su código —lo que
+                                    popularmente se conoce como "No-Code"—. La idea es desde luego llamativa, y permite
+                                    transformar por ejemplo formularios desde el papel en formularios en una aplicación
+                                    móvil. <a
+                                        href="https://www.xataka.com/aplicaciones/programar-app-cuando-puedes-dibujarla-asi-funciona-nueva-ia-no-code-microsoft">Ver
+                                        más...</a>
                                 </p>
                             </div>
                         </article>
                     </li>
                     <li>
                         <article class="noticia clearfix">
-                            <h3>Título Noticia 3</h3>
+                            <h3>Todos los colores que ves en la web están mal. Y la culpa la tiene tu navegador</h3>
                             <div>
-                                <a href="#"><img src="../multimedia/imagen_vacia.png" alt="noticia"></a>
+                                <a href="#"><img src="../multimedia/noticias/color.png" alt="sRGB" target="_blank"></a>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                    reprehenderit
-                                    in
-                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                    laborum.
-                                    <br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut
-                                    labore et dolore magna aliqua. <a href="#">Ver más...</a>
+                                    Esos colores que estás viendo en esa página web no están bien. Las imágenes PNG o
+                                    los valores hexadecimales que se usan en el código CSS o en las imágenes SVG nos
+                                    traicionan, pero la culpa no es de ellas, sino de nuestra obsesión por tratar de
+                                    comprimir los datos. <br>
+
+                                    Para evitar que el tamaño de esos ficheros se dispare solemos usar un algoritmo de
+                                    compresión con pérdida llamado "8-bit sRGB" por el que se lleva apostando desde
+                                    1996, y precisamente el problema es ese. <a href="#">Ver más...</a>
                                 </p>
 
                             </div>
@@ -123,7 +116,7 @@
                     </li>
                     <li>
                         <article class="noticia">
-                            <h3><a href="#">Mas noticias</a></h3>
+                            <h3><a href="#">Mas noticias muy pronto...</a></h3>
                         </article>
                     </li>
                 </ul>
@@ -172,7 +165,7 @@
                 <ul>
                     <li><a class="ahref--instagram" href="#">Instagram </a></li>
                     <li><a href="#" class="ahref--facebook">Facebook </a></li>
-                    <li><a href="#" class="ahref--github">GitHub</a></li>
+                    <li><a href="https://github.com/MauOrtizDev" class="ahref--github" target="_blank">GitHub</a></li>
                     <!-- No he puesto aún las referencias a las redes sociales porque no las tengo -->
                 </ul>
             </div>
